# retro_game_exchange

./: Cargo.toml  Dockerfile  LICENSE  diesel.toml  docker-compose.yaml  justfile  sailfish.toml
docker-entrypoint-initdb.d/: init-user-db.sh
frontend/: .parcelrc  .posthtmlrc  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
frontend/parcel-packager-sailfish/: index.js  package.json
frontend/posthtml-lucide/: package.json  tsdown.config.ts
frontend/posthtml-lucide/lib/: index.js
frontend/src/: error.stpl  htmx_import.js  index.html  login.stpl  style.scss
frontend/src/games/: all_games.stpl  game.stpl
migrations/2026-01-15-215037-0000_create_games/: down.sql  up.sql
migrations/2026-01-16-195504-0000_create_users/: up.sql
migrations/2026-01-16-200044-0000_link_users_to_games/: down.sql  up.sql
migrations/2026-01-17-013754-0000_games_rls/: down.sql  up.sql
src/: error.rs  html_or_json.rs  htmx.rs  json_or_form.rs  main.rs  schema.rs
src/api/: auth.rs  games.rs
