[package]
name = "retro-game-exchange"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.6", features = ["macros"] }
axum-extra = { version = "0.12.5", features = ["typed-header", "cookie"] }
biome_formatter = { git = "https://github.com/biomejs/biome", version = "0.5.7" }
biome_html_formatter = { git = "https://github.com/biomejs/biome", version = "0.0.0" }
biome_html_parser = { git = "https://github.com/biomejs/biome", version = "0.0.1" }
blake3 = "1.8.3"
clap = { version = "4.5.51", features = ["derive", "env"] }
color-eyre = "0.6.5"
diesel = "2.3.5"
diesel-async = { version = "0.7.4", features = ["bb8", "migrations", "postgres"] }
diesel-derive-enum = { version = "3.0.0-beta.1", features = ["postgres"] }
diesel_migrations = "2.3.1"
dotenvy = "0.15.7"
sailfish = "0.10.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_urlencoded = "0.7.1"
serde_with = "3.16.1"
supports-color = "3.0.2"
tokio = { version = "1.48.0", features = ["rt-multi-thread", "macros", "signal"] }
toml = { version = "0.9.8", features = ["serde"] }
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["catch-panic", "fs", "trace"] }
tracing = "0.1.41"
tracing-error = "0.2.1"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
utoipa = { version = "5.4.0", features = ["axum_extras"] }
utoipa-axum = "0.2.0"
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }
